<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/background_item_surat"
    android:paddingVertical="8dp">

    <TextView
        android:id="@+id/nomor_detail_item_kepada"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="6dp"
        android:paddingEnd="12dp"
        android:paddingStart="0dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@color/background_item_surat"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kepada2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingEnd="6dp"
                android:paddingStart="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kepada"
                android:textSize="16sp"
                android:id="@+id/kepada_detail_disposisi"
                android:paddingHorizontal="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@color/background_item_surat"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waktujawab2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingEnd="6dp"
                android:paddingStart="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waktu2"
                android:textSize="16sp"
                android:id="@+id/waktujawab_detail_disposisi"
                android:paddingHorizontal="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@color/background_item_surat"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jawaban2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingEnd="6dp"
                android:paddingStart="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jawaban"
                android:textSize="16sp"
                android:id="@+id/jawaban_detail_disposisi"
                android:paddingHorizontal="3dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:background="@color/background_item_surat"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keterangan2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingEnd="6dp"
                android:paddingStart="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keterangan"
                android:textSize="16sp"
                android:id="@+id/keterangan_detail_disposisi"
                android:paddingHorizontal="3dp"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>