<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/background_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@color/background_item_surat">

            <RelativeLayout
                android:id="@+id/rightContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/status"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:paddingBottom="7dp"
                    android:id="@+id/drop_arrow"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_toEndOf="@id/status"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    android:contentDescription="@string/dropdown" />

            </RelativeLayout>

            <LinearLayout
                android:layout_below="@id/leftContainer"
                android:id="@+id/tujuan_container"
                android:layout_marginEnd="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_atas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/tujuan2"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/atas_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tujuan"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/leftContainer"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/rightContainer">

                <TextView
                    android:id="@+id/nomor_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor_surat"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/nomor_tv">

                    <TextView
                        android:id="@+id/text_hal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/perihal2"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/perihal_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/perihal"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_expand_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/button_container"
                android:layout_alignBottom="@id/button_container"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/container_text_bawah"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_bawah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/dari2"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/bawah_tv"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/black"
                        android:text="@string/dari"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_tgl"
                    android:layout_below="@id/container_text_bawah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/tgl_surat3"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_marginStart="4dp"
                        android:id="@+id/tanggal_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/tanggal_surat"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_keterangan"
                    android:layout_below="@id/container_tgl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/keterangan2"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_marginStart="4dp"
                        android:id="@+id/tvKeterangan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/keterangan"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="28dp">

                    <TextView
                        android:id="@+id/text_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/status2"
                        android:textStyle="italic"
                        android:paddingHorizontal="4dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/status_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="4dp"
                        android:text="@string/status"
                        android:textStyle="italic"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/button_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:layout_margin="5dp">

                <Button
                    android:id="@+id/btTampil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/tampil"/>

                <Button
                    android:id="@+id/btKoreksi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/koreksi"/>

                <Button
                    android:id="@+id/btSetuju"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/setuju"/>

                <Button
                    android:id="@+id/btDraft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/draft" />

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
